<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!--baidu speech recognize-->
    <Switch
        android:id="@+id/speech_switch"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/is_speech_recognize"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_gravity="start"
        />

    <CheckBox
        android:id="@+id/speech_checkbox_debug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/speech_debug"
        android:checked="false"/>

    <CheckBox
        android:id="@+id/speech_checkbox_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/speech_control"
        android:checked="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/speech_vad_timeout"
        />

    <RadioGroup
        android:id="@+id/speech_vad_timeout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/speech_vad_timeout_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/speech_vad_timeout_0"
            />
        <RadioButton
            android:id="@+id/speech_vad_timeout_800"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/speech_vad_timeout_800"
            />
        <RadioButton
            android:id="@+id/speech_vad_timeout_2000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/speech_vad_timeout_2000"
            />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/speech_language_type"
        />

    <com.min.baiduai.demo.view.MultiLineRadioGroup
        android:id="@+id/speech_language_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/speech_language_type_mandarin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/speech_language_type_mandarin"
                />
            <RadioButton
                android:id="@+id/speech_language_type_mandarin_punctuation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/speech_language_type_mandarin_punctuation"
                />
            <RadioButton
                android:id="@+id/speech_language_type_mandarin_far"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/speech_language_type_mandarin_far"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/speech_language_type_sichuanese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/speech_language_type_sichuanese"
                />
            <RadioButton
                android:id="@+id/speech_language_type_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/speech_language_type_english"
                />
        </LinearLayout>
    </com.min.baiduai.demo.view.MultiLineRadioGroup>

</LinearLayout>